<resources>
    <!-- App -->
    <string name="app_name">CalcAndConverter</string>

    <!-- Calculator -->
    <string name="result">0</string>
    <string name="error">Error</string>
    <string name="enter_valid_number">Enter a valid number</string>

    <!-- Digits -->
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>

    <!-- Operators -->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="clear">C</string>
    <string name="backspace">del</string>
    <string name="del">del</string>
    <string name="percent">%</string>


    <!-- Conversion -->
    <string name="converter_label">Unit Converter</string>
    <string name="convert">Convert</string>
    <string name="inches_to_cm">Inches to Centimeters</string>
    <string name="cm_to_inches">Centimeters to Inches</string>
    <string name="pounds_to_kg">Pounds to Kilograms</string>
    <string name="kg_to_pounds">Kilograms to Pounds</string>
    <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>    <string name="miles_to_km">Miles to Kilometres</string>
    <string name="km_to_miles">Kilometres to Miles</string>
    <string name="litres_to_millilitres">Litres to Millilitres</string>
    <string name="millilitres_to_litres">Millilitres to Litres</string>
     <string name="cm_to_feet">Centimeters to Feet</string>
    <string name="feet_to_cm">Feet to Centimeters</string>
    <string name="unit_km">km</string>
    <string name="unit_miles">miles</string>
    <string name="unit_litres">litres</string>
    <string name="unit_millilitres">ml</string>
    <string name="conversion_result">Result: %1$s</string>


    <!-- SI Units -->
    <string name="unit_cm">cm</string>
    <string name="unit_inches">inches</string>
    <string name="unit_feet">ft</string>
    <string name="unit_kg">kg</string>
    <string name="unit_lbs">lbs</string>
    <string name="unit_celsius">°C</string>
    <string name="unit_fahrenheit">°F</string>
</resources>
